[package]
name = "pty-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1"
libc = "0.2"
nix = { version = "0.27", features = ["term"] }
tokio = { version = "1.0", features = ["full"] }